<resources>
    <string name="app_name">Gruppearbeid</string>
    <!-- Main titles -->
    <string name="people">People</string>
    <string name="planets">Planets</string>
    <string name="films">Films</string>
    <string name="starships">Starships</string>
    <string name="species">Species</string>
    <string name="vehicles">Vehicles</string>

    <!-- Secondary titles -->
    <string name="residents">Residents</string>
    <string name="characters">Characters</string>
    <string name="pilots">Pilots</string>
    <string name="homeworld">Homeworld</string>

    <!-- TextView placeholders -->
    <string name="placeholder_name">Name</string>
    <string name="placeholder_title">Title</string>
    <string name="placeholder_no_starships">No starships</string>
    <string name="placeholder_search_title">Search title...</string>
    <string name="placeholder_search_name">Search name...</string>
    <string name="placeholder_search_name_and_model">Search name or model...</string>
    <string name="btnAddImageText">Add image</string>
    <string name="URL_choose_image">Insert URL of image down below</string>
    <string name="URL_hint">URL</string>
    <string name="Btn_URL_text">Load image from URL</string>
    <string name="Btn_chooseFinalImage_text">Add Image</string>
    <string name="image_textView">Images</string>

    <string-array name="choices_select_image">
        <item>@string/planets</item>
        <item>@string/people</item>
        <item>@string/films</item>
        <item>@string/starships</item>
        <item>@string/species</item>
        <item>@string/vehicles</item>
    </string-array>
    <string name="placeholder_dots"></string>

    <!-- Button -->
    <string name="prev">Prev</string>
    <string name="next">Next</string>
</resources>