<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".PlanetsActivity"
        android:id="@+id/PlanetsScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/PlanetsContent"
            style="@style/activity_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/PlanetsSearch"
                style="@style/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/placeholder_search_name"
                android:inputType="textPersonName" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/PlanetRecycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent" 
                android:layout_weight="1"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/PlanetsDots"
                    style="@style/dots"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/placeholder_dots"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/PlanetsPrev"
                    style="@style/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="7dp"
                    android:text="@string/prev"
                    android:textAlignment="center"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/PlanetsNext"
                    style="@style/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:text="@string/next"
                    android:textAlignment="center"
                    android:visibility="invisible" />
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/PlanetsNavigation"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="start"
            app:menu="@menu/bottom_menu" />
    </LinearLayout>
